--- a/src/triton_object_recognition/package.xml
+++ b/src/triton_object_recognition/package.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>triton_interfaces</name>
+  <name>triton_object_recognition</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="logan@todo.todo">logan</maintainer>
+  <maintainer email="kevinh42@student.ubc.ca">kevin</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>std_msgs</depend>
+  <depend>triton_interfaces</depend>
+  <depend>cv_bridge</depend>
+  <depend>sensor_msgs</depend>
+  <depend>OpenCV</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-
-  <depend>action_msgs</depend>
-  <depend>std_msgs</depend>
-
-  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
