--- a/src/triton_pipeline/config/object_recognition.yaml
+++ b/src/triton_pipeline/config/object_recognition.yaml
@@ -5,4 +5,6 @@ pipeline_manager:
         - object_recognition::ObjectRecognizer
       namespace: /triton/object_recognition
       pkg_name: triton_object_recognition
+      remap_rules:
+        - /triton/object_recognition/object_recognizer/in:=/tr/gazebo_drivers/camera/front/image_raw
     use_sim_time: false
