--- a/src/triton_gate/package.xml
+++ b/src/triton_gate/package.xml
@@ -9,6 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>OpenCV</depend>
+  <depend>cv_bridge</depend>
   <depend>triton_vision_utils</depend>
 
   <test_depend>ament_lint_auto</test_depend>
