--- a/src/triton_pipeline/config/example.yaml
+++ b/src/triton_pipeline/config/example.yaml
@@ -4,8 +4,10 @@ pipeline_manager:
       components:
         - example::ComponentOne
         - example::ComponentTwo
+      pkg_names: 
+        - triton_example
+        - triton_example
       namespace: /triton/example
-      pkg_name: triton_example
       remap_rules:
         - /triton/example/component_two/in:=/triton/example/component_one/out
     use_sim_time: false
