added colcon test results

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -30,5 +30,7 @@ jobs:
           source /opt/ros/foxy/setup.bash
           colcon build
           colcon test
+          colcon test-result --verbose
+
 
 
