--- a/src/triton_object_recognition/package.xml
+++ b/src/triton_object_recognition/package.xml
@@ -15,6 +15,7 @@
   <depend>triton_interfaces</depend>
   <depend>cv_bridge</depend>
   <depend>sensor_msgs</depend>
+  <depend>image_transport</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
