--- a/src/triton_gazebo/package.xml
+++ b/src/triton_gazebo/package.xml
@@ -13,6 +13,8 @@
   <depend>gazebo</depend>
   <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
+  <depend>image_transport</depend>
+  <depend>sensor_msgs</depend>
   <depend>rclcpp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
