--- a/src/triton_gazebo/package.xml
+++ b/src/triton_gazebo/package.xml
@@ -17,6 +17,7 @@
   <depend>sensor_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
+  <depend>cv_bridge</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
