--- a/src/triton_controls/test/config/test_thruster_simple_config.yaml
+++ b/src/triton_controls/test/config/test_thruster_simple_config.yaml
@@ -3,17 +3,25 @@
     num_thrusters: 4
     t1:
       contrib: 
-        x: 1
+        x: 1.0
       ly: 1.0
     t2:
       contrib: 
-        x: 1
-      ly: 1.0
+        x: 1.0
+      ly: -1.0
     t3:
       contrib: 
-        y: 1
+        y: 1.0
       lx: 1.0
     t4:
       contrib: 
-        y: 1
-      lx: 1.0
+        y: 1.0
+      lx: -1.0
+    t5:
+      contrib:
+        z: 1.0
+      ly: 1.0
+    t6:
+      contrib:
+        z: 1.0
+      ly: -1.0
