--- a/src/triton_controls/CMakeLists.txt
+++ b/src/triton_controls/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(triton_object_recognition)
+project(triton_controls)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -19,60 +19,79 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
-find_package(std_msgs REQUIRED)
+find_package(Eigen3 REQUIRED)
 find_package(triton_interfaces REQUIRED)
-find_package(cv_bridge REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(image_transport REQUIRED)
 find_package(OpenCV 4.2 REQUIRED)
-find_package(Boost REQUIRED COMPONENTS filesystem) 
 
 include_directories(include ${catkin_INCLUDE_DIRS})
-include_directories(${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
-add_library(triton_object_recognition SHARED
-  src/object_recognizer.cpp
+add_executable(thrust_allocator 
+  src/thrust_allocator.cpp
 )
-
-target_link_libraries(triton_object_recognition ${OpenCV_LIBRARIES} ${Boost_LIBRARIES})
-
-rclcpp_components_register_nodes(triton_object_recognition 
-  "triton_object_recognition::ObjectRecognizer"
+target_include_directories(thrust_allocator PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
 )
-
-target_compile_definitions(triton_object_recognition
-  PRIVATE "triton_object_recognition_CPP_BUILDING_DLL"
-)
-
-ament_target_dependencies(triton_object_recognition
+ament_target_dependencies(
+  thrust_allocator
   "rclcpp"
   "rclcpp_components"
-  "std_msgs"
+  "Eigen3"
   "triton_interfaces"
-  "cv_bridge"
+  "geometry_msgs"
   "sensor_msgs"
-  "image_transport"
   "OpenCV"
-  "Boost"
+)
+install(TARGETS thrust_allocator
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+add_library(triton_controls SHARED
+  src/thrust_allocator.cpp
+)
+
+rclcpp_components_register_nodes(triton_controls "triton_controls::ThrustAllocator")
+
+target_compile_definitions(triton_controls
+  PRIVATE "triton_controls_CPP_BUILDING_DLL"
+)
+
+ament_target_dependencies(triton_controls
+  "rclcpp"
+  "rclcpp_components"
+  "Eigen3"
+  "triton_interfaces"
+  "geometry_msgs"
+  "sensor_msgs"
+  "OpenCV"
 )
 
 install(TARGETS
-  triton_object_recognition
+  triton_controls
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
 
 install(DIRECTORY
-  config
   launch
+  config
   DESTINATION share/${PROJECT_NAME}/
 )
+
+ 
+install(DIRECTORY
+  test/config
+  DESTINATION share/${PROJECT_NAME}/test
+)
+
 
 if(BUILD_TESTING)
   find_package(launch_testing_ament_cmake REQUIRED)
   add_launch_test(
-    test/test_object_recognition_launch.py
+    test/test_thrust_allocator_launch.py
   )
 endif()
 
