--- a/src/triton_gazebo/config/underwater_camera.yaml
+++ b/src/triton_gazebo/config/underwater_camera.yaml
@@ -14,6 +14,10 @@ irradiance_transmission:
   9C:  [09.0,15.0,21.0,29.0,37.0,46.0,53.0,56.0,55.0,52.0,47.0,40.0,33.0]
 
 spectral_sensitivity:
+  ideal:
+    - [1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0]
+    - [1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0]
+    - [1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0]
   SONY_IMX322:
     - [0.35,0.55,0.675,0.65,0.45,0.2,0.1,0.05,0.03,0.03,0.05,0.075,0.09]
     - [0.05,0.04,0.06,0.45,0.85,0.93,0.9,0.79,0.5,0.25,0.18,0.2,0.31]
