--- a/src/triton_gazebo/package.xml
+++ b/src/triton_gazebo/package.xml
@@ -13,7 +13,11 @@
   <depend>gazebo</depend>
   <depend>gazebo_dev</depend>
   <depend>gazebo_ros</depend>
+  <depend>image_transport</depend>
+  <depend>sensor_msgs</depend>
   <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>cv_bridge</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
