--- a/src/triton_gazebo/models/triton_auv/model.config
+++ b/src/triton_gazebo/models/triton_auv/model.config
@@ -4,8 +4,10 @@
     <version>1.0</version>
     <sdf version="1.7">model.sdf</sdf>
     <author>
-        <name></name>
-        <email></email>
+        <name>Jake</name>
+        <email>jcronin97@live.ca</email>
     </author>
-    <description></description>
+    <description>
+        Triton AUV model consisting of six copies of thruster model and frame model
+    </description>
 </model>
