--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -30,6 +30,7 @@ jobs:
           source /opt/ros/foxy/setup.bash
           source /usr/share/gazebo/setup.sh
           colcon build
+          source ./install/setup.bash
           colcon test
           colcon test-result --verbose
 
