--- a/src/triton_controls/config/thruster_config.yaml
+++ b/src/triton_controls/config/thruster_config.yaml
@@ -1,35 +1,46 @@
 /triton/thrust_allocator:
   ros__parameters:
+  # Old values are commented, we should think about remodelling the Gazebo Sim to match  
     num_thrusters: 6
     t1:
       contrib: 
         x: -0.7071
         y: 0.7071
-      lx: 6.5640
-      ly: 6.5640
+      lx: -0.235
+      # lx: 6.5640
+      ly: -0.189 
+      # ly: 6.5640
     t2:
       contrib: 
         x: -0.7071
         y: -0.7071
-      lx: 6.5640
-      ly: 6.5640
+      lx: -0.235
+      # lx: 6.5640
+      ly: 0.189
+      # ly: 6.5640
     t3:
       contrib:
         x: 0.7071
         y: -0.7071
-      lx: 7.5630
-      ly: 7.5630
+      lx: 0.2035
+      # lx: 7.5630
+      ly: 0.189
+      # ly: 7.5630
     t4:
       contrib: 
         x: 0.7071
         y: 0.7071
-      lx: 7.5630
-      ly: 7.5630
+      lx: 0.2035
+      # lx: 7.5630
+      ly: -0.189
+      # ly: 7.5630
     t5:
       contrib:
         z: -1.0
-      ly: 8.744
+      ly: -0.22
+      # ly: 8.744
     t6:
       contrib:
         z: -1.0
-      ly: 8.239
+      ly: 0.22
+      # ly: 8.239
