--- a/src/triton_gazebo/package.xml
+++ b/src/triton_gazebo/package.xml
@@ -8,6 +8,7 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <depend>gazebo_ros_pkgs</depend>
   <depend>gazebo</depend>
@@ -17,6 +18,7 @@
   <depend>sensor_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
+  <depend>rclpy</depend>
   <depend>cv_bridge</depend>
 
   <test_depend>ament_lint_auto</test_depend>
