renamed image saver

--- a/src/triton_gazebo/CMakeLists.txt
+++ b/src/triton_gazebo/CMakeLists.txt
@@ -126,7 +126,7 @@ ament_python_install_package(${PROJECT_NAME})
 
 # Install Python executables
 install(PROGRAMS
-  BBoxSubscriber.py
+  synchronized_image_saver.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
