Added triton_interfaces to packages.xml which should actually fix the build failure

--- a/src/triton_gazebo/package.xml
+++ b/src/triton_gazebo/package.xml
@@ -20,6 +20,7 @@
   <depend>rclcpp_components</depend>
   <depend>rclpy</depend>
   <depend>cv_bridge</depend>
+  <depend>triton_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
