--- a/src/triton_state_maintainer/config/offset.yaml
+++ b/src/triton_state_maintainer/config/offset.yaml
@@ -1,8 +1,8 @@
-component_one:
+/triton/state_maintainer/component_one:
   ros__parameters:
     pose_offset:
       pos:
-        x: 10.0
+        x: 20.0
         y: 0.0
         z: 0.0
       orient:
