--- a/src/triton_state_maintainer/package.xml
+++ b/src/triton_state_maintainer/package.xml
@@ -14,6 +14,8 @@
   <depend>std_msgs</depend>
   <depend>triton_interfaces</depend>
   <depend>geometry_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
