--- a/src/triton_gazebo/models/cube_auv/model.config
+++ b/src/triton_gazebo/models/cube_auv/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-    <name>cube</name>
+    <name>cube_auv</name>
     <version>1.0</version>
     <sdf version='1.7'>model.sdf</sdf>
 
@@ -11,7 +11,6 @@
     </author>
 
     <description>
-    A cube with a ROS2 force plugin acting on it which reads
-    from the topic /triton/gazebo_drivers/force
+    A simplified cube version of the AUV
   </description>
 </model>
