adding to controls

--- a/src/triton_controls/CMakeLists.txt
+++ b/src/triton_controls/CMakeLists.txt
@@ -24,13 +24,21 @@ find_package(triton_interfaces REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(OpenCV 4.2 REQUIRED)
+find_package(tf2 REQUIRED)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_executable(thrust_allocator 
   src/thrust_allocator.cpp
 )
+add_executable(waypoint_marker
+  src/waypoint_marker.cpp
+)
 target_include_directories(thrust_allocator PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+target_include_directories(waypoint_marker PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
 )
@@ -44,7 +52,18 @@ ament_target_dependencies(
   "sensor_msgs"
   "OpenCV"
 )
+ament_target_dependencies(
+  waypoint_marker
+  "rclcpp"
+  "rclcpp_components"
+  "triton_interfaces"
+  "geometry_msgs"
+  "tf2"
+)
 install(TARGETS thrust_allocator
+  DESTINATION lib/${PROJECT_NAME}
+)
+install(TARGETS waypoint_marker
   DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -53,6 +72,7 @@ add_library(triton_controls SHARED
 )
 
 rclcpp_components_register_nodes(triton_controls "triton_controls::ThrustAllocator")
+rclcpp_components_register_nodes(triton_controls "triton_controls::WaypointMarker")
 
 target_compile_definitions(triton_controls
   PRIVATE "triton_controls_CPP_BUILDING_DLL"
@@ -66,6 +86,13 @@ ament_target_dependencies(triton_controls
   "geometry_msgs"
   "sensor_msgs"
   "OpenCV"
+)
+ament_target_dependencies(waypoint_marker
+  "rclcpp"
+  "rclcpp_components"
+  "triton_interfaces"
+  "geometry_msgs"
+  "tf2"
 )
 
 install(TARGETS
