--- a/src/triton_controls/package.xml
+++ b/src/triton_controls/package.xml
@@ -15,6 +15,7 @@
   <depend>triton_interfaces</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
