--- a/src/triton_pipeline/config/example.yaml
+++ b/src/triton_pipeline/config/example.yaml
@@ -7,7 +7,7 @@ pipeline_manager:
       pkg_names: 
         - triton_example
         - triton_example
-      namespace: /triton/example
+      namespace: /triton
       remap_rules:
         - /triton/example/component_two/in:=/triton/example/component_one/out
     use_sim_time: false
