--- a/src/triton_state/package.xml
+++ b/src/triton_state/package.xml
@@ -9,6 +9,7 @@
 
   <depend>triton_interfaces</depend>
   <depend>rclpy</depend>
+  <depend>python3-yaml</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
