Added scripts for setting up darknet and training yolo. Final weights and cfg are automatically copied to triton_object_detection shared folder for use in yolo node

--- a/src/triton_gazebo/package.xml
+++ b/src/triton_gazebo/package.xml
@@ -21,6 +21,7 @@
   <depend>rclpy</depend>
   <depend>cv_bridge</depend>
   <depend>triton_interfaces</depend>
+  <depend>python-gdown-pip</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
