Underwater camera now subscribes to and republishes bounding boxes for better time synchronization

--- a/src/triton_gazebo/CMakeLists.txt
+++ b/src/triton_gazebo/CMakeLists.txt
@@ -54,6 +54,7 @@ ament_target_dependencies(underwater_camera
   "rclcpp"
   "OpenCV"
   "cv_bridge"
+  "triton_interfaces"
 )
 
 install(TARGETS 
@@ -100,6 +101,7 @@ ament_target_dependencies(triton_gazebo
   "image_transport"
   "sensor_msgs"
   "message_filters"
+  "triton_interfaces"
 )
 
 install(TARGETS
