--- a/src/triton_interfaces/package.xml
+++ b/src/triton_interfaces/package.xml
@@ -12,11 +12,10 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-
   <depend>action_msgs</depend>
   <depend>std_msgs</depend>
-
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
