--- a/src/triton_gazebo/models/cube_auv/model.config
+++ b/src/triton_gazebo/models/cube_auv/model.config
@@ -3,8 +3,7 @@
 <model>
     <name>cube_auv</name>
     <version>1.0</version>
-    <sdf version='1.7'>model.sdf</sdf>
-
+    <sdf version='1.7'>model.urdf</sdf>
     <author>
         <name>Logan Fillo</name>
         <email>logan.fillo@gmail.com</email>
