added message for sphere detection node

--- a/src/triton_interfaces/package.xml
+++ b/src/triton_interfaces/package.xml
@@ -16,6 +16,7 @@
 
   <depend>action_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
