--- a/src/triton_sphere/CMakeLists.txt
+++ b/src/triton_sphere/CMakeLists.txt
@@ -17,13 +17,16 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(OpenCV 4 REQUIRED)
 find_package(triton_vision_utils REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(triton_interfaces REQUIRED)
 
-include_directories(
-  include
-)
+include_directories(include ${catkin_INCLUDE_DIRS})
+include_directories(${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 add_executable(sphere_detector
   src/sphere_detector.cpp
@@ -38,6 +41,10 @@ ament_target_dependencies(sphere_detector
   cv_bridge
   OpenCV
   triton_vision_utils
+  "rclcpp"
+  "rclcpp_components"
+  "geometry_msgs"
+  "triton_interfaces"
 )
 
 install(TARGETS sphere_detector
