--- a/src/triton_sphere/package.xml
+++ b/src/triton_sphere/package.xml
@@ -11,6 +11,10 @@
 
   <depend>cv_bridge</depend>
   <depend>triton_vision_utils</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>geometry_msgs</depend>
+  <depend>triton_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
