Added Random Camera Plugin; Bounding Box Plugin now ignores models behind camera; Bounding Box Image Saver now ignores duplicates

--- a/src/triton_gazebo/CMakeLists.txt
+++ b/src/triton_gazebo/CMakeLists.txt
@@ -89,6 +89,17 @@ ament_target_dependencies(camera_orbit_plugin
 ament_export_libraries(camera_orbit_plugin)
 target_link_libraries(camera_orbit_plugin ${GAZEBO_LIBRARIES})
 
+add_library(random_camera_plugin SHARED src/random_camera_plugin.cpp)
+target_include_directories(random_camera_plugin PUBLIC
+  include
+)
+target_link_libraries(random_camera_plugin ${GAZEBO_LIBRARIES})
+ament_target_dependencies(random_camera_plugin
+  "triton_interfaces"
+)
+ament_export_libraries(random_camera_plugin)
+target_link_libraries(random_camera_plugin ${GAZEBO_LIBRARIES})
+
 rclcpp_components_register_nodes(triton_gazebo "triton_gazebo::UnderwaterCamera")
 
 target_compile_definitions(triton_gazebo
@@ -120,6 +131,13 @@ install(TARGETS
 
 install(TARGETS
   camera_orbit_plugin
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+
+install(TARGETS
+  random_camera_plugin
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
