--- a/src/triton_sphere/package.xml
+++ b/src/triton_sphere/package.xml
@@ -15,6 +15,9 @@
   <depend>rclcpp_components</depend>
   <depend>geometry_msgs</depend>
   <depend>triton_interfaces</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>image_transport</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
