--- a/src/triton_sphere_detection/package.xml
+++ b/src/triton_sphere_detection/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>triton_sphere</name>
+  <name>triton_sphere_detection</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="jaredchan42@gmail.com">logan</maintainer>
@@ -21,6 +21,9 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>launch</test_depend>
+  <test_depend>launch_testing</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
