--- a/src/triton_gate/CMakeLists.txt
+++ b/src/triton_gate/CMakeLists.txt
@@ -70,6 +70,12 @@ ament_target_dependencies(gate_detector
   triton_vision_utils
 )
 
+install(DIRECTORY
+  launch
+  config
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 install(TARGETS gate_detector
   EXPORT export_${PROJECT_NAME}
   DESTINATION lib/${PROJECT_NAME}
