--- a/src/triton_gate/package.xml
+++ b/src/triton_gate/package.xml
@@ -11,6 +11,9 @@
 
   <depend>cv_bridge</depend>
   <depend>triton_vision_utils</depend>
+  <depend>sensor_msgs</depend>
+  <depend>image_transport</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
