--- a/src/triton_gazebo/config/yolov3-custom.cfg
+++ b/src/triton_gazebo/config/yolov3-custom.cfg
@@ -1,13 +1,13 @@
 [net]
 # Testing
-batch=1
-subdivisions=1
+# batch=1
+# subdivisions=1
 # Training
 batch=64
 subdivisions=16
 width=416
 height=416
-channels=3
+channels=3 
 momentum=0.9
 decay=0.0005
 angle=0
@@ -17,10 +17,14 @@ hue=.1
 
 learning_rate=0.001
 burn_in=1000
-max_batches = 2000
+max_batches = 6000
 policy=steps
-steps=1600,1800
+steps=4800,5400
 scales=.1,.1
+
+flip=1
+blur=1
+mosaic=1
 
 [convolutional]
 batch_normalize=1
