--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup ROS2 distro and system deps
-        uses: ros-tooling/setup-ros@0.2
+        uses: ros-tooling/setup-ros@v0.2
         with: 
           required-ros-distributions: foxy
 
