--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -26,8 +26,7 @@ jobs:
           rosdep install -i --from-path src --rosdistro foxy -y
 
       - name: Install OpenCV 4.5.3
-        - uses: actions/checkout@v2
-        - uses: Dovyski/setup-opencv-action@v1
+        uses: Dovyski/setup-opencv-action@v1
         with:
           opencv-version: 4.5.3
           CMAKE_BUILD_TYPE: RELEASE          
