--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,12 +24,21 @@ jobs:
         run: |
           rosdep update
           rosdep install -i --from-path src --rosdistro foxy -y
-
-      - name: Install OpenCV 4.5.3
-        uses: Dovyski/setup-opencv-action@v1
+          
+      - name: Cache OpenCV
+        id: opencv-cache
+        uses: actions/cache@v2
         with:
-          opencv-version: 4.5.3
-          CMAKE_BUILD_TYPE: RELEASE          
+          path: ./opencv-install
+          key: ${{ runner.os }}-opencv-cache
+
+      - name: Install OpenCV
+        uses: rayandrews/with-opencv-action@v1
+        with:  
+          dir: ./opencv-install
+          cached: ${{ steps.opencv-cache.outputs.cache-hit }}
+          opencv-version: '4.5.3'
+          CMAKE_BUILD_TYPE: RELEASE   
 
       - name: Source setup and build then test using colcon
         run: |
