--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -40,7 +40,11 @@ jobs:
           opencv-version: '4.5.3'
           CMAKE_BUILD_TYPE: RELEASE   
           ENABLE_PRECOMPILED_HEADERS: OFF
-
+          
+      - name: Ignore with colcon build
+        run: |
+          touch ./opencv-install/COLCON_IGNORE
+          
       - name: Source setup and build then test using colcon
         run: |
           source /opt/ros/foxy/setup.bash
