potential fix for opencv shared library not being found

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -46,6 +46,8 @@ jobs:
           touch ./opencv-install/COLCON_IGNORE
           
       - name: Source setup and build then test using colcon
+        env:
+          LD_LIBRARY_PATH: /usr/local/lib/
         run: |
           source /opt/ros/foxy/setup.bash
           source /usr/share/gazebo/setup.sh
